--- a/Tableview/CustomCell/HeaderCell.xib
+++ b/Tableview/CustomCell/HeaderCell.xib
@@ -6,41 +6,60 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="cxk-wN-pdQ" customClass="HeaderCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="cxk-wN-pdQ" customClass="HeaderCell">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="145"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="144.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="125">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
-                        <color key="backgroundColor" red="0.2156862745" green="0.50196078430000002" blue="0.72941176470000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="320" id="Baq-HY-Pmj"/>
-                            <constraint firstAttribute="height" constant="80" id="LtG-NG-utX"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
-                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="122" translatesAutoresizingMaskIntoConstraints="NO" id="JKz-fX-o8W">
+                        <rect key="frame" x="20" y="11" width="373.5" height="30"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QAZ_34567876543" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="125">
+                                <rect key="frame" x="0.0" y="2.5" width="221.5" height="25.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downarrow" translatesAutoresizingMaskIntoConstraints="NO" id="ciT-na-adm">
+                                <rect key="frame" x="343.5" y="0.0" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Jse-GO-xAJ"/>
+                                    <constraint firstAttribute="width" constant="30" id="u9W-ri-Iu6"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                    </stackView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fm-iE-qw8">
+                        <rect key="frame" x="20" y="51.5" width="374" height="82.5"/>
+                        <color key="backgroundColor" red="1" green="0.52120530610000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
                 </subviews>
+                <color key="backgroundColor" red="0.9663731702280679" green="1" blue="0.9882568476467638" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="125" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="top" id="FQV-KA-v2X"/>
-                    <constraint firstAttribute="bottom" secondItem="125" secondAttribute="bottom" id="QnD-1Z-meL"/>
-                    <constraint firstItem="125" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" id="RhZ-A9-PXC"/>
-                    <constraint firstAttribute="trailing" secondItem="125" secondAttribute="trailing" id="Tjd-YP-xYP"/>
+                    <constraint firstItem="4fm-iE-qw8" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leadingMargin" id="350-4B-Wvg"/>
+                    <constraint firstItem="4fm-iE-qw8" firstAttribute="bottom" secondItem="YTl-1W-gDM" secondAttribute="bottomMargin" id="3L2-qz-BEL"/>
+                    <constraint firstItem="JKz-fX-o8W" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="topMargin" id="7pe-mS-Ngf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="JKz-fX-o8W" secondAttribute="trailing" id="cxQ-25-JwY"/>
+                    <constraint firstItem="4fm-iE-qw8" firstAttribute="trailing" secondItem="YTl-1W-gDM" secondAttribute="trailingMargin" id="lOS-Qh-rtk"/>
+                    <constraint firstItem="4fm-iE-qw8" firstAttribute="top" secondItem="JKz-fX-o8W" secondAttribute="bottom" constant="10.5" id="sXb-Uz-0A4"/>
+                    <constraint firstItem="JKz-fX-o8W" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leadingMargin" id="wdQ-Xx-LZu"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="headerCell" destination="125" id="name-outlet-125"/>
             </connections>
-            <point key="canvasLocation" x="25" y="70"/>
+            <point key="canvasLocation" x="72" y="102.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="downarrow" width="16" height="16"/>
+    </resources>
 </document>
