--- a/Tableview/CustomCell/HeaderCell.xib
+++ b/Tableview/CustomCell/HeaderCell.xib
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
@@ -16,20 +16,20 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="145"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="144.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="144"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="122" translatesAutoresizingMaskIntoConstraints="NO" id="JKz-fX-o8W">
-                        <rect key="frame" x="20" y="11" width="373.5" height="30"/>
+                        <rect key="frame" x="16" y="8" width="382" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QAZ_34567876543" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="125">
-                                <rect key="frame" x="0.0" y="2.5" width="221.5" height="25.5"/>
+                                <rect key="frame" x="0.0" y="2.5" width="214.5" height="25.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downarrow" translatesAutoresizingMaskIntoConstraints="NO" id="ciT-na-adm">
-                                <rect key="frame" x="343.5" y="0.0" width="30" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downarrow" translatesAutoresizingMaskIntoConstraints="NO" id="ciT-na-adm" misplaced="YES">
+                                <rect key="frame" x="336.5" y="0.0" width="45.5" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Jse-GO-xAJ"/>
                                     <constraint firstAttribute="width" constant="30" id="u9W-ri-Iu6"/>
@@ -38,7 +38,7 @@
                         </subviews>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fm-iE-qw8">
-                        <rect key="frame" x="20" y="51.5" width="374" height="82.5"/>
+                        <rect key="frame" x="16" y="48.5" width="382" height="88"/>
                         <color key="backgroundColor" red="1" green="0.52120530610000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </subviews>
@@ -55,11 +55,13 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="headerCell" destination="125" id="name-outlet-125"/>
+                <outlet property="headerArrow" destination="ciT-na-adm" id="name-outlet-ciT-na-adm"/>
             </connections>
             <point key="canvasLocation" x="72" y="102.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="downarrow" width="16" height="16"/>
+        <image name="downarrow" width="32" height="32"/>
+        <image name="uparrow" width="32" height="32"/>
     </resources>
 </document>
