--- a/Tableview/CustomCell/HeaderCell.xib
+++ b/Tableview/CustomCell/HeaderCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -12,18 +12,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="145" id="cxk-wN-pdQ" customClass="HeaderCell">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="145"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="72" id="cxk-wN-pdQ" customClass="HeaderCell">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cxk-wN-pdQ" id="YTl-1W-gDM">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="144.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="71.666666666666671"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="122" translatesAutoresizingMaskIntoConstraints="NO" id="JKz-fX-o8W">
                         <rect key="frame" x="20" y="11" width="374" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QAZ_34567876543" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="125">
-                                <rect key="frame" x="0.0" y="2.5" width="222" height="25.5"/>
+                                <rect key="frame" x="0.0" y="2.3333333333333339" width="222" height="25.333333333333329"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -38,32 +38,71 @@
                         </subviews>
                     </stackView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fm-iE-qw8">
-                        <rect key="frame" x="20" y="51.5" width="374" height="82.5"/>
+                        <rect key="frame" x="20" y="49" width="374" height="16"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="Fpt-xM-UgH">
-                                <rect key="frame" x="5" y="31" width="364" height="20.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="hQc-m3-Tmy">
+                                <rect key="frame" x="2.9999999999999964" y="1" width="63.666666666666657" height="13.333333333333334"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ordered" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Unp-bz-8U6">
-                                        <rect key="frame" x="0.0" y="0.0" width="63.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ordered" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zgy-io-hpZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="43.333333333333336" height="13.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shipped" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GsU-rA-2VA">
-                                        <rect key="frame" x="88.5" y="0.0" width="63.5" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ia-hC-9aN">
+                                        <rect key="frame" x="49.333333333333329" y="0.0" width="14.333333333333336" height="13.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Processed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FQu-3w-p3w">
-                                        <rect key="frame" x="177" y="0.0" width="81" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="rD7-Bl-rrV">
+                                <rect key="frame" x="86.666666666666671" y="1" width="63.333333333333329" height="13.333333333333334"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shipped" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yqd-Lm-UUG">
+                                        <rect key="frame" x="0.0" y="0.0" width="43.333333333333336" height="13.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaming" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y5w-jq-7ma">
-                                        <rect key="frame" x="283" y="0.0" width="81" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="chp-wc-88T">
+                                        <rect key="frame" x="49.333333333333329" y="0.0" width="14" height="13.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Cbv-Ld-gsO">
+                                <rect key="frame" x="170" y="1" width="75" height="13.333333333333334"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Processed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Ze-CT-xIv">
+                                        <rect key="frame" x="0.0" y="0.0" width="55" height="13.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pp6-1j-LSI">
+                                        <rect key="frame" x="61" y="0.0" width="14" height="13.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="PXo-ht-TMZ">
+                                <rect key="frame" x="265" y="1" width="80.333333333333314" height="13.333333333333334"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaming" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7d-Xq-5mC">
+                                        <rect key="frame" x="0.0" y="0.0" width="55" height="13.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Be-rX-gmb">
+                                        <rect key="frame" x="61.000000000000007" y="0.0" width="19.333333333333336" height="13.333333333333334"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -72,30 +111,36 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.52120530610000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Fpt-xM-UgH" firstAttribute="centerY" secondItem="4fm-iE-qw8" secondAttribute="centerY" id="ZLi-OC-Psi"/>
-                            <constraint firstItem="Fpt-xM-UgH" firstAttribute="centerX" secondItem="4fm-iE-qw8" secondAttribute="centerX" id="aXd-il-kKJ"/>
+                            <constraint firstItem="PXo-ht-TMZ" firstAttribute="leading" secondItem="Cbv-Ld-gsO" secondAttribute="trailing" constant="20" id="2Ne-uC-r5b"/>
+                            <constraint firstItem="hQc-m3-Tmy" firstAttribute="leading" secondItem="4fm-iE-qw8" secondAttribute="leading" constant="3" id="4Rm-5A-2fs"/>
+                            <constraint firstItem="Cbv-Ld-gsO" firstAttribute="leading" secondItem="rD7-Bl-rrV" secondAttribute="trailing" constant="20" id="AuF-lY-OaW"/>
+                            <constraint firstItem="hQc-m3-Tmy" firstAttribute="centerY" secondItem="4fm-iE-qw8" secondAttribute="centerY" id="MDf-Ls-pq8"/>
+                            <constraint firstAttribute="height" constant="16" id="MN2-Uf-kkk"/>
+                            <constraint firstItem="rD7-Bl-rrV" firstAttribute="centerY" secondItem="4fm-iE-qw8" secondAttribute="centerY" id="bkD-2w-N4N"/>
+                            <constraint firstItem="Cbv-Ld-gsO" firstAttribute="centerY" secondItem="4fm-iE-qw8" secondAttribute="centerY" id="ikR-NL-aE7"/>
+                            <constraint firstItem="PXo-ht-TMZ" firstAttribute="centerY" secondItem="4fm-iE-qw8" secondAttribute="centerY" id="qRb-AI-m4R"/>
+                            <constraint firstItem="rD7-Bl-rrV" firstAttribute="leading" secondItem="hQc-m3-Tmy" secondAttribute="trailing" constant="20" id="tuK-Vm-Txg"/>
                         </constraints>
                     </view>
                 </subviews>
-                <color key="backgroundColor" red="0.9663731702280679" green="1" blue="0.9882568476467638" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" red="0.96637317020000002" green="1" blue="0.98825684759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="4fm-iE-qw8" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leadingMargin" id="350-4B-Wvg"/>
-                    <constraint firstItem="4fm-iE-qw8" firstAttribute="bottom" secondItem="YTl-1W-gDM" secondAttribute="bottomMargin" id="3L2-qz-BEL"/>
+                    <constraint firstAttribute="trailing" secondItem="4fm-iE-qw8" secondAttribute="trailing" constant="20" id="3eL-EY-Pst"/>
                     <constraint firstItem="JKz-fX-o8W" firstAttribute="top" secondItem="YTl-1W-gDM" secondAttribute="topMargin" id="7pe-mS-Ngf"/>
+                    <constraint firstAttribute="bottom" secondItem="4fm-iE-qw8" secondAttribute="bottom" constant="6.5" id="LKC-Ze-ekW"/>
                     <constraint firstAttribute="trailingMargin" secondItem="JKz-fX-o8W" secondAttribute="trailing" id="cxQ-25-JwY"/>
-                    <constraint firstItem="4fm-iE-qw8" firstAttribute="trailing" secondItem="YTl-1W-gDM" secondAttribute="trailingMargin" id="lOS-Qh-rtk"/>
-                    <constraint firstItem="4fm-iE-qw8" firstAttribute="top" secondItem="JKz-fX-o8W" secondAttribute="bottom" constant="10.5" id="sXb-Uz-0A4"/>
                     <constraint firstItem="JKz-fX-o8W" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leadingMargin" id="wdQ-Xx-LZu"/>
+                    <constraint firstItem="4fm-iE-qw8" firstAttribute="leading" secondItem="YTl-1W-gDM" secondAttribute="leading" constant="20" id="zIp-oA-VAi"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="headerArrow" destination="ciT-na-adm" id="name-outlet-ciT-na-adm"/>
                 <outlet property="headerCell" destination="125" id="name-outlet-125"/>
             </connections>
-            <point key="canvasLocation" x="72" y="102.5"/>
+            <point key="canvasLocation" x="72" y="66"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="downarrow" width="16" height="16"/>
+        <image name="downarrow" width="10" height="10"/>
     </resources>
 </document>
